--- a/index.html
+++ b/index.html
@@ -406,9 +406,8 @@
             </div>
             
             <div class="hidden md:flex gap-10 text-[12px] font-bold uppercase tracking-widest text-slate-500">
-                <a href="#about" class="nav-link hover:text-emerald-600 transition">About System</a>
-                <a href="#" class="nav-link hover:text-emerald-600 transition">Neural Core</a>
-                <a href="#" class="nav-link hover:text-emerald-600 transition">Bio-Privacy</a>
+                <a href="html.find nearby Health Care" class="nav-link hover:text-emerald-600 transition">Find nearby Health Care</a>
+                
             </div>
 
             <button class="bg-slate-900 text-white px-6 py-2 rounded-full text-xs font-bold uppercase tracking-wider hover:bg-emerald-600 transition-all duration-300 shadow-lg shadow-slate-200">
