--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             </div>
             
             <div class="hidden md:flex gap-10 text-[12px] font-bold uppercase tracking-widest text-slate-500">
-                <a href="html.find nearby Health Care" class="nav-link hover:text-emerald-600 transition">Find nearby Health Care</a>
+                <a href="find.html" class="nav-link hover:text-emerald-600 transition">Find nearby Health Care</a>
                 
             </div>
 
