--- a/index.html
+++ b/index.html
@@ -469,14 +469,14 @@
                     <div class="absolute top-0 -left-[100%] w-full h-full bg-gradient-to-r from-transparent via-white/30 to-transparent skew-x-[-20deg] group-hover:animate-shine"></div>
                     
                     <span class="relative z-10 flex items-center gap-2">
-                        Start Bio-Integration
+                        Find nearby Health Care
                         <svg class="w-5 h-5 transition-transform group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
                     </span>
                 </button>
                 
                 <div class="flex flex-col items-start border-l-2 border-emerald-500 pl-4">
                     <span class="mono text-[10px] text-slate-400 uppercase tracking-tighter">Diagnostic Readiness</span>
-                    <span class="text-slate-900 font-bold">99.98% Precision Rate</span>
+                    <span class="text-slate-900 font-bold">99.98% Accuracy</span>
                 </div>
             </div>
         </div>
