--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <a href="find.html" class="nav-link hover:text-emerald-600 transition">Find nearby Health Care</a>
                
             </div>
-           <button onclick="window.location.href='https://your-ai-link.com'" class="bg-slate-900 text-white px-8 py-4 md:px-6 md:py-2 rounded-full text-sm md:text-xs font-bold uppercase tracking-wider hover:bg-emerald-600 transition-all duration-300 shadow-lg shadow-slate-200 active:scale-95 w-full md:w-auto">
+           <button onclick="window.location.href='https://lordmade.github.io/pos/'" class="bg-slate-900 text-white px-8 py-4 md:px-6 md:py-2 rounded-full text-sm md:text-xs font-bold uppercase tracking-wider hover:bg-emerald-600 transition-all duration-300 shadow-lg shadow-slate-200 active:scale-95 w-full md:w-auto">
     Try Bophelo Bot
 </button>
         </div>
