--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <nav class="bg-white border-b border-gray-100 px-8 py-4 flex justify-between items-center shadow-sm z-10">
         <div class="flex items-center gap-4">
-            <div class="bg-blue-600 text-white p-3 rounded-2xl shadow-lg shadow-blue-200">
-                <i class="fa-solid fa-chart-pie text-xl"></i>
+            <div class="bg-blue-600 rounded-2xl shadow-lg shadow-blue-200 overflow-hidden w-12 h-12 flex items-center justify-center">
+                <img src="https://i.postimg.cc/3wNyfTyJ/LOGO-removebg-preview.png" alt="Logo" class="w-10 h-10 object-contain">
             </div>
             <div>
                 <h1 class="text-xl font-black text-gray-900 tracking-tight">Admin Portal</h1>
-                <p class="text-[10px] text-gray-400 font-bold uppercase tracking-widest">Analytics Engine v3.8</p>
+                <p class="text-[10px] text-gray-400 font-bold uppercase tracking-widest">Analytics Engine v3.9</p>
             </div>
         </div>
         
