--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HR Command Center | Enterprise Analytics</title>
-    <script src="https://cdn.tailwindcss.com "></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js "></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ">
+    <script src="https://cdn.tailwindcss.com  "></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js  "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js  "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js  "></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css  ">
   
     <style>
         body { background-color: #f3f4f6; }
@@ -33,11 +33,11 @@
 <body class="text-gray-800 h-screen flex flex-col overflow-hidden">
     <nav class="bg-white border-b border-gray-100 px-8 py-4 flex justify-between items-center shadow-sm z-10">
         <div class="flex items-center gap-4">
-            <div class="bg-blue-600 rounded-2xl shadow-lg shadow-blue-200 overflow-hidden w-12 h-12 flex items-center justify-center">
-                <img src="https://i.postimg.cc/3wNyfTyJ/LOGO-removebg-preview.png " alt="Logo" class="w-10 h-10 object-contain">
+            <div class="w-12 h-12 flex items-center justify-center">
+                <img src="https://i.postimg.cc/05BVVkbb/LOGO-removebg-preview.png  " alt="Logo" class="w-10 h-10 object-contain">
             </div>
             <div>
-                <h1 class="text-xl font-black text-gray-900 tracking-tight">Admin Portal</h1>
+                <h1 class="text-xl font-black tracking-tight"><span class="text-white">ATTENDANCE</span><span class="text-blue-600">HUB</span></h1>
                 <p class="text-[10px] text-gray-400 font-bold uppercase tracking-widest">Analytics Engine v3.9</p>
             </div>
         </div>
@@ -221,13 +221,13 @@
         <div onclick="adminSetAction('Lunch Back')" class="action-item px-4 py-2 text-xs font-black cursor-pointer border-b border-gray-50">LUNCH BACK</div>
         <div onclick="adminSetAction('Clock Out')" class="action-item px-4 py-2 text-xs font-black cursor-pointer text-red-500">CLOCK OUT</div>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js "></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js "></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js  "></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js  "></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyAxBT0oESoL62oz_x_Z8cMtdENWZPx4tMI",
             authDomain: "pinotp-d7ef5.firebaseapp.com",
-            databaseURL: "https://pinotp-d7ef5-default-rtdb.firebaseio.com ",
+            databaseURL: "https://pinotp-d7ef5-default-rtdb.firebaseio.com  ",
             projectId: "pinotp-d7ef5",
             storageBucket: "pinotp-d7ef5.firebasestorage.app",
             messagingSenderId: "708458917827",
